// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CD MODULE banner if service limit exceeds: service limit exceeded 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main limitBreachedBanner StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-left-large StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    style="height: 56px;"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--intent-warning"
      data-icon="upgrade-bolt"
    >
      <svg
        fill="none"
        height="18"
        viewBox="0 0 33 28"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.773 17.341L20.885 1.75l-2.297 8.909h8.184L9.66 26.25l2.297-8.909H3.773z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-bold StyledProps--margin-left-small StyledProps--margin-right-small StyledProps--color StyledProps--color-orange900"
    >
      COMMON.FEATURE.UPGRADEREQUIRED.TITLE
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--margin-right-small"
    >
      pipeline.featureRestriction.serviceLimitExceeded
    </p>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
      style="width: 130px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.explorePlans
      </span>
    </button>
  </div>
</div>
`;

exports[`CD MODULE basic if service limit is in warning: service warning 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main warningBanner StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-left-large StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    style="height: 56px;"
  >
    <span
      class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--intent-primary"
      icon="info-sign"
    >
      <svg
        data-icon="info-sign"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          info-sign
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-left-small StyledProps--margin-right-small"
    >
      pipeline.featureRestriction.serviceUsageWarning
    </p>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
      style="width: 130px;"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.explorePlans
      </span>
    </button>
  </div>
</div>
`;
